# karalle

./: .gitignore  1  Cargo.toml  README.md  Sample Sort.ipynb  benchmark.ipynb  gen_data.py  mem.sh  mem_result.txt  memory benchmark.ipynb  run_all.sh
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
runner/: run-16.sh  run-2.sh  run-36.sh  run-8.sh
src/: lib.rs  main.rs
src/benchmark/: big_map.rs  filter.rs  flatten.rs  forloop.rs  map.rs  merge_sort.rs  mod.rs  quick_sort.rs  sample_sort.rs  scan.rs  sort.rs
src/constant/: consts.rs  mod.rs
src/iter/: filter.rs  map.rs  mod.rs  scan.rs
src/primitive/: filter.rs  flatten.rs  map.rs  mod.rs  par_block_transpose.rs  par_bucket_transpose.rs  par_filter.rs  par_flatten.rs  par_map.rs  par_scan.rs  par_transpose.rs  reduce.rs  sample_sort.rs  scan.rs  utils.rs  vec.rs
src/sort/: mod.rs  par_quick_sort.rs  par_sample_sort.rs  quick_sort.rs  quicksort.rs  sample_sort.rs
src/util/: benchmark.rs  data_generator.rs  file_reader.rs  mod.rs
