[package]
name = "project-k"
version = "0.1.0"
authors = ["Pitipat Chairoj <pitipat1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
num = "0.2.1"
num_cpus = "1.12.0"
rand = "0.7.3"
rayon = "1.1"
scoped_threadpool = "0.1.9"
